# MathLib

./: .gitignore  LICENSE  MathLib.sln  README.md
MathLib/: CMakeLists.txt  MathLib.vcxproj  MathLib.vcxproj.filters
MathLib/include/: MathLib.hpp  Maths.h  Maths.hpp  mlCommon.hpp  mlMatrices.hpp  mlPrimitives.hpp
MathLib/include/MathLib/: MathLib.hpp  mlCommon.hpp  mlMatrices.hpp  mlPrimitives.hpp  mlVectors.hpp
MathLib/source/: 2DVectors.cpp  3DVectors.cpp  ComplexNumbers.cpp  Geometry.cpp  Matrices.cpp  Primitives.cpp  Utility.cpp  Vectors.cpp
